<resources>
    <string name="app_name">Vartalap</string>
    <string name="need_a_new_account">Need A New Account?</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_new_account">Create A new Account</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_to_get_together">Welcome To Get Together</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="your_e_mail">Your E-mail</string>
    <string name="login">Login</string>
    <string name="display_name">Display Name</string>
    <string name="hi_there_i_m_using_get_together_chat_app">Hi there, I\'m using Get Together Chat App</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="settings">Settings</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="submit">submit</string>
    <string name="total_friend">Total Friend</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="last_seen">Last Seen</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
