<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BB000000"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileCircleImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_name"
        android:layout_marginTop="50dp"
        android:textSize="32sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileCircleImage" />

    <TextView
        android:id="@+id/profileUserStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/your_status"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileUserName" />

    <TextView
        android:id="@+id/profileTotalFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/total_friend"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileUserStatus" />

    <Button
        android:id="@+id/profileSendRequest"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn"
        android:backgroundTint="#DC34EA01"
        android:text="@string/send_friend_request"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTotalFriend"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/profileDeclineBtn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/decline_friend_request"
        android:background="@drawable/rounded_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileSendRequest" />

</androidx.constraintlayout.widget.ConstraintLayout>