<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.StartActivity"
    android:background="@color/colorPrimary"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
           android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:text="@string/welcome_to_get_together"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startRegistrationButton"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startLoginBtn" />

    <Button
        android:id="@+id/startLoginBtn"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:background="@color/colorAccent"
        android:layout_marginTop="35dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>