<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/settingToolbar"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settingImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="75dp"
            android:src="@drawable/download"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingToolbar" />

    <TextView
        android:id="@+id/settingDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_name"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:lines="1"
        android:visibility="invisible"
        android:textStyle="bold"
        android:layout_marginTop="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingImage" />

    <TextView
        android:id="@+id/settingStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        android:visibility="invisible"
        android:layout_marginTop="15dp"
        android:text="@string/hi_there_i_m_using_get_together_chat_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingDisplayName" />

    <Button
        android:id="@+id/settingImageBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/change_image"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:layout_marginTop="220dp"
        android:background="@android:color/white"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingStatus" />

    <Button
        android:id="@+id/settingStatusBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@color/colorAccent"
        android:text="@string/change_status"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingImageBtn" />

    <ProgressBar
        android:id="@+id/progressBarSettingActivity"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>