<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/choose_an_option"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/bottomSheetImage"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/download" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/galleyBottomSheet"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_btn"
                android:text="@string/gallery"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/submitBottomSheetBtn"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_btn"
                android:backgroundTint="#3C85DA"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/cameraBottomSheet"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/galleyBottomSheet"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_btn"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/camera"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:id="@+id/progressBarBottomSheet"/>

        </RelativeLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="11dp"
        android:background="@android:color/white" />

    <!--  <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp"/>
          -->


</LinearLayout>